--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,6 +11,10 @@
                     <div class="login-form">
                         <form action="" method="post">
                             <div class="form-group">
+                                <label>Username</label>
+                                <input class="au-input au-input--full" type="text" name="username" placeholder="Username">
+                            </div>
+                            <div class="form-group">
                                 <label>Email Address</label>
                                 <input class="au-input au-input--full" type="email" name="email" placeholder="Email">
                             </div>
@@ -20,18 +24,21 @@
                             </div>
                             <div class="login-checkbox">
                                 <label>
-                                    <input type="checkbox" name="remember">Remember Me
+                                    <input type="checkbox" name="aggree">Agree the terms and policy
                                 </label>
-                                {{!-- <label>
-                                    <a href="#">Forgotten Password?</a>
-                                </label> --}}
                             </div>
-                            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">sign in</button>
+                            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">register</button>
+                            <div class="social-login-content">
+                                <div class="social-button">
+                                    <button class="au-btn au-btn--block au-btn--blue m-b-20">register with facebook</button>
+                                    <button class="au-btn au-btn--block au-btn--blue2">register with twitter</button>
+                                </div>
+                            </div>
                         </form>
                         <div class="register-link">
                             <p>
-                                Don't you have account?
-                                <a href="/register">Sign Up Here</a>
+                                Already have account?
+                                <a href="/login">Sign In</a>
                             </p>
                         </div>
                     </div>
@@ -39,5 +46,4 @@
             </div>
         </div>
     </div>
-
 </div>
