--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,7 +11,7 @@
                     <div class="login-form">
                         <form action="" method="post">
                             <div class="form-group">
-                                <label>Username</label>
+                                <label>Usuario</label>
                                 <input class="au-input au-input--full" type="text" name="username" placeholder="Username">
                             </div>
                             <div class="form-group">
