--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,7 +12,7 @@
                         <form action="" method="post">
                             <div class="form-group">
                                 <label>Usuario</label>
-                                <input class="au-input au-input--full" type="email" name="email" placeholder="Email">
+                                <input class="au-input au-input--full" type="text" name="email" placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <label>Contraseña</label>
