--- a/views/index.hbs
+++ b/views/index.hbs
@@ -152,7 +152,7 @@
                                     </ul>
                                 </div>
                                 <button class="au-btn au-btn-icon au-btn--green">
-                                    <i class="zmdi zmdi-plus"></i>add item</button>
+                                    <i class="zmdi zmdi-plus"></i>Nuevo Empleado</button>
                             </div>
                         </div>
                     </div>
@@ -169,21 +169,27 @@
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
                                 <h3 class="title-3 m-b-30">
-                                    <i class="zmdi zmdi-account-calendar"></i>user data</h3>
+                                    <i class="zmdi zmdi-account-calendar"></i>Empleados</h3>
                                 <div class="filters m-b-45">
+                                    <div class="form-header" action="" method="POST">
+                                        <input class="au-input au-input--xl" type="text" name="search" placeholder="Buscar empleado...">
+                                        <button class="au-btn--submit" type="submit">
+                                            <i class="zmdi zmdi-search"></i>
+                                        </button>
+                                    </div>
                                     <div class="rs-select2--dark rs-select2--md m-r-10 rs-select2--border">
-                                        <select class="js-select2" name="property">
-                                            <option selected="selected">All Properties</option>
-                                            <option value="">Products</option>
-                                            <option value="">Services</option>
+                                        <select class="js-select2" name="state">
+                                            <option selected="selected">Estado</option>
+                                            <option value="">Activo</option>
+                                            <option value="">Inactivo</option>
                                         </select>
                                         <div class="dropDownSelect2"></div>
                                     </div>
                                     <div class="rs-select2--dark rs-select2--sm rs-select2--border">
-                                        <select class="js-select2 au-select-dark" name="time">
-                                            <option selected="selected">All Time</option>
-                                            <option value="">By Month</option>
-                                            <option value="">By Day</option>
+                                        <select class="js-select2 au-select-dark" name="salary">
+                                            <option selected="selected">Tipo de Salario</option>
+                                            <option value="">Mensual</option>
+                                            <option value="">Por Hora</option>
                                         </select>
                                         <div class="dropDownSelect2"></div>
                                     </div>
@@ -198,9 +204,9 @@
                                                     <span class="au-checkmark"></span>
                                                 </label>
                                             </td>
-                                            <td>name</td>
-                                            <td>role</td>
-                                            <td>type</td>
+                                            <td>Nombre / DNI</td>
+                                            <td>Estado</td>
+                                            <td>Tipo de Salario</td>
                                             <td></td>
                                         </tr>
                                         </thead>
@@ -216,12 +222,12 @@
                                                 <div class="table-data__info">
                                                     <h6>lori lynch</h6>
                                                     <span>
-                                                                <a href="#">johndoe@gmail.com</a>
+                                                                <a href="#">40000000</a>
                                                             </span>
                                                 </div>
                                             </td>
                                             <td>
-                                                <span class="role admin">admin</span>
+                                                <span class="state inactive">Inactivo</span>
                                             </td>
                                             <td>
                                                 <div class="rs-select2--trans rs-select2--sm">
@@ -250,12 +256,12 @@
                                                 <div class="table-data__info">
                                                     <h6>lori lynch</h6>
                                                     <span>
-                                                                <a href="#">johndoe@gmail.com</a>
+                                                                <a href="#">40000000</a>
                                                             </span>
                                                 </div>
                                             </td>
                                             <td>
-                                                <span class="role user">user</span>
+                                                <span class="state active">Active</span>
                                             </td>
                                             <td>
                                                 <div class="rs-select2--trans rs-select2--sm">
@@ -284,12 +290,12 @@
                                                 <div class="table-data__info">
                                                     <h6>lori lynch</h6>
                                                     <span>
-                                                                <a href="#">johndoe@gmail.com</a>
+                                                                <a href="#">40000000</a>
                                                             </span>
                                                 </div>
                                             </td>
                                             <td>
-                                                <span class="role user">user</span>
+                                                <span class="state inactive">Inactivo</span>
                                             </td>
                                             <td>
                                                 <div class="rs-select2--trans rs-select2--sm">
@@ -318,12 +324,12 @@
                                                 <div class="table-data__info">
                                                     <h6>lori lynch</h6>
                                                     <span>
-                                                                <a href="#">johndoe@gmail.com</a>
+                                                                <a href="#">40000000</a>
                                                             </span>
                                                 </div>
                                             </td>
                                             <td>
-                                                <span class="role member">member</span>
+                                                <span class="state active">Activo</span>
                                             </td>
                                             <td>
                                                 <div class="rs-select2--trans rs-select2--sm">
