Modificaciones a interfaz Empleados

--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -230,13 +230,8 @@
                                                 <span class="state inactive">Inactivo</span>
                                             </td>
                                             <td>
-                                                <div class="rs-select2--trans rs-select2--sm">
-                                                    <select class="js-select2" name="property">
-                                                        <option selected="selected">Full Control</option>
-                                                        <option value="">Post</option>
-                                                        <option value="">Watch</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
+                                                <div class="table-data__info">
+                                                    <a>Por Hora</a>
                                                 </div>
                                             </td>
                                             <td>
@@ -264,13 +259,8 @@
                                                 <span class="state active">Active</span>
                                             </td>
                                             <td>
-                                                <div class="rs-select2--trans rs-select2--sm">
-                                                    <select class="js-select2" name="property">
-                                                        <option value="">Full Control</option>
-                                                        <option value="" selected="selected">Post</option>
-                                                        <option value="">Watch</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
+                                                <div class="table-data__info">
+                                                    <a>Mensual</a>
                                                 </div>
                                             </td>
                                             <td>
@@ -299,12 +289,9 @@
                                             </td>
                                             <td>
                                                 <div class="rs-select2--trans rs-select2--sm">
-                                                    <select class="js-select2" name="property">
-                                                        <option value="">Full Control</option>
-                                                        <option value="" selected="selected">Post</option>
-                                                        <option value="">Watch</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
+                                                    <div class="table-data__info">
+                                                        <a>Mensual</a>
+                                                    </div>
                                                 </div>
                                             </td>
                                             <td>
@@ -332,13 +319,8 @@
                                                 <span class="state active">Activo</span>
                                             </td>
                                             <td>
-                                                <div class="rs-select2--trans rs-select2--sm">
-                                                    <select class="js-select2" name="property">
-                                                        <option selected="selected">Full Control</option>
-                                                        <option value="">Post</option>
-                                                        <option value="">Watch</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
+                                                <div class="table-data__info">
+                                                    <a>Por Hora</a>
                                                 </div>
                                             </td>
                                             <td>
@@ -351,7 +333,7 @@
                                     </table>
                                 </div>
                                 <div class="user-data__footer">
-                                    <button class="au-btn au-btn-load">load more</button>
+                                    <button class="au-btn au-btn-load">Cargar Más</button>
                                 </div>
                             </div>
                             <!-- END USER DATA-->
