Mod Empleyees Front

--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -170,6 +170,9 @@
                             <div class="user-data m-b-40">
                                 <h3 class="title-3 m-b-30">
                                     <i class="zmdi zmdi-account-calendar"></i>Empleados</h3>
+
+
+                                <!-- SEARCH
                                 <div class="filters m-b-45">
                                     <div class="form-header" action="" method="POST">
                                         <input class="au-input au-input--xl" type="text" name="search" placeholder="Buscar empleado...">
@@ -194,16 +197,11 @@
                                         <div class="dropDownSelect2"></div>
                                     </div>
                                 </div>
+                                END SEARCH-->
                                 <div class="table-responsive table-data">
                                     <table class="table">
                                         <thead>
                                         <tr>
-                                            <td>
-                                                <label class="au-checkbox">
-                                                    <input type="checkbox">
-                                                    <span class="au-checkmark"></span>
-                                                </label>
-                                            </td>
                                             <td>Nombre / DNI</td>
                                             <td>Estado</td>
                                             <td>Tipo de Salario</td>
@@ -213,12 +211,6 @@
                                         <tbody>
                                         <tr>
                                             <td>
-                                                <label class="au-checkbox">
-                                                    <input type="checkbox">
-                                                    <span class="au-checkmark"></span>
-                                                </label>
-                                            </td>
-                                            <td>
                                                 <div class="table-data__info">
                                                     <h6>lori lynch</h6>
                                                     <span>
@@ -228,95 +220,6 @@
                                             </td>
                                             <td>
                                                 <span class="state inactive">Inactivo</span>
-                                            </td>
-                                            <td>
-                                                <div class="table-data__info">
-                                                    <a>Por Hora</a>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                        <span class="more">
-                                                            <i class="zmdi zmdi-more"></i>
-                                                        </span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <label class="au-checkbox">
-                                                    <input type="checkbox" checked="checked">
-                                                    <span class="au-checkmark"></span>
-                                                </label>
-                                            </td>
-                                            <td>
-                                                <div class="table-data__info">
-                                                    <h6>lori lynch</h6>
-                                                    <span>
-                                                                <a href="#">40000000</a>
-                                                            </span>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <span class="state active">Active</span>
-                                            </td>
-                                            <td>
-                                                <div class="table-data__info">
-                                                    <a>Mensual</a>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                        <span class="more">
-                                                            <i class="zmdi zmdi-more"></i>
-                                                        </span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <label class="au-checkbox">
-                                                    <input type="checkbox">
-                                                    <span class="au-checkmark"></span>
-                                                </label>
-                                            </td>
-                                            <td>
-                                                <div class="table-data__info">
-                                                    <h6>lori lynch</h6>
-                                                    <span>
-                                                                <a href="#">40000000</a>
-                                                            </span>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <span class="state inactive">Inactivo</span>
-                                            </td>
-                                            <td>
-                                                <div class="rs-select2--trans rs-select2--sm">
-                                                    <div class="table-data__info">
-                                                        <a>Mensual</a>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                        <span class="more">
-                                                            <i class="zmdi zmdi-more"></i>
-                                                        </span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <label class="au-checkbox">
-                                                    <input type="checkbox">
-                                                    <span class="au-checkmark"></span>
-                                                </label>
-                                            </td>
-                                            <td>
-                                                <div class="table-data__info">
-                                                    <h6>lori lynch</h6>
-                                                    <span>
-                                                                <a href="#">40000000</a>
-                                                            </span>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <span class="state active">Activo</span>
                                             </td>
                                             <td>
                                                 <div class="table-data__info">
