--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -60,6 +60,8 @@
         <!-- Angular Controllers -->
         <script src="/js/controllers/LoginController.js"></script>
         <script src="/js/controllers/RegisterController.js"></script>
+        <script src="/js/controllers/EmployeesController.js"></script>
+        <script src="/js/controllers/UpdatesController.js"></script>
 </body>
 
 </html>
