--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -1,4 +1,4 @@
-<div class="page-wrapper">
+<div class="page-wrapper" ng-controller="EmployeesController" ng-init="getUserId('{{user._id}}')">
     <!-- MENU SIDEBAR-->
     <aside class="menu-sidebar2">
         <div class="logo">
@@ -8,10 +8,7 @@
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
             <div class="account2">
-                <div class="image img-cir img-120">
-                    <h2></h2>
-                </div>
-                <h4 class="name">john doe</h4>
+                <h4 class="name">{{user.name}}</h4>
                 <a href="#">Log Out</a>
             </div>
             <nav class="navbar-sidebar2">
@@ -142,12 +139,6 @@
                                 <div class="au-breadcrumb-left">
                                     <span class="au-breadcrumb-span">Usted está aquí:</span>
                                     <ul class="list-unstyled list-inline au-breadcrumb__list">
-                                        <li class="list-inline-item active">
-                                            <a href="#">Home</a>
-                                        </li>
-                                        <li class="list-inline-item seprate">
-                                            <span>/</span>
-                                        </li>
                                         <li class="list-inline-item">Empleados</li>
                                     </ul>
                                 </div>
