--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,14 +19,11 @@
                                 <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña">
                             </div>
                             <div class="login-checkbox">
-                                <label>
-                                    <input type="checkbox" name="remember">Remember Me
-                                </label>
                                 {{!-- <label>
                                     <a href="#">Forgotten Password?</a>
                                 </label> --}}
                             </div>
-                            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">sign in</button>
+                            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Ingresar</button>
                         </form>
                         <div class="register-link">
                             <p>
