--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -14,7 +14,7 @@
             <nav class="navbar-sidebar2">
                 <ul class="list-unstyled navbar__list">
                     <li>
-                        <a href="index.html">
+                        <a href="employees">
                             <i class="fa fa-user"></i>Empleados</a>
                     </li>
                     <li>
@@ -58,8 +58,8 @@
                                             <i class="zmdi zmdi-email-open"></i>
                                         </div>
                                         <div class="content">
-                                            <p>You got a email notification</p>
-                                            <span class="date">April 12, 2018 06:50</span>
+                                            <p>Usted tiene un correo nuevo</p>
+                                            <span class="date">12 de Abril, 2018 09:37</span>
                                         </div>
                                     </div>
                                     <div class="notifi__item">
@@ -67,8 +67,8 @@
                                             <i class="zmdi zmdi-account-box"></i>
                                         </div>
                                         <div class="content">
-                                            <p>Your account has been blocked</p>
-                                            <span class="date">April 12, 2018 06:50</span>
+                                            <p>Su cuenta ha sido bloqueada</p>
+                                            <span class="date">12 de Abril, 2018 09:23</span>
                                         </div>
                                     </div>
                                     <div class="notifi__item">
@@ -76,8 +76,8 @@
                                             <i class="zmdi zmdi-file-text"></i>
                                         </div>
                                         <div class="content">
-                                            <p>You got a new file</p>
-                                            <span class="date">April 12, 2018 06:50</span>
+                                            <p>Usted tiene un nuevo archivo</p>
+                                            <span class="date">11 de Abril, 2018 18:56</span>
                                         </div>
                                     </div>
                                     <div class="notifi__footer">
