--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -227,7 +227,7 @@
             </div>
         </section>
 
-        <!-- modal large -->
+        <!-- EMPLOYEE REGISTER -->
         <div class="modal fade" id="largeModal" tabindex="-1" role="dialog" aria-labelledby="largeModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
@@ -292,7 +292,7 @@
                 </div>
             </div>
         </div>
-        <!-- end modal large -->
+        <!-- END EMPLOYEE REGISTER -->
         <!-- END PAGE CONTAINER-->
     </div>
 
