--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -154,7 +154,7 @@
                                     </ul>
                                 </div>
                                 <button class="au-btn au-btn-icon au-btn--green" type="button" data-toggle="modal"
-                                    data-target="#largeModal">
+                                    data-target="#largeModal" ng-click="newEmployee()">
                                     <i class="zmdi zmdi-plus"></i>Nuevo Empleado
                                 </button>
                             </div>
@@ -173,35 +173,8 @@
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
                                 <h3 class="title-3 m-b-30">
-                                    <i class="zmdi zmdi-account-calendar"></i>Empleados</h3>
-
-
-                                <!-- SEARCH
-                                <div class="filters m-b-45">
-                                    <div class="form-header" action="" method="POST">
-                                        <input class="au-input au-input--xl" type="text" name="search" placeholder="Buscar empleado...">
-                                        <button class="au-btn--submit" type="submit">
-                                            <i class="zmdi zmdi-search"></i>
-                                        </button>
-                                    </div>
-                                    <div class="rs-select2--dark rs-select2--md m-r-10 rs-select2--border">
-                                        <select class="js-select2" name="state">
-                                            <option selected="selected">Estado</option>
-                                            <option value="">Activo</option>
-                                            <option value="">Inactivo</option>
-                                        </select>
-                                        <div class="dropDownSelect2"></div>
-                                    </div>
-                                    <div class="rs-select2--dark rs-select2--sm rs-select2--border">
-                                        <select class="js-select2 au-select-dark" name="salary">
-                                            <option selected="selected">Tipo de Salario</option>
-                                            <option value="">Mensual</option>
-                                            <option value="">Por Hora</option>
-                                        </select>
-                                        <div class="dropDownSelect2"></div>
-                                    </div>
-                                </div>
-                                END SEARCH-->
+                                    <i class="zmdi zmdi-account-calendar"></i>Empleados
+                                </h3>
                                 <div class="table-responsive table-data">
                                     <table class="table">
                                         <thead>
@@ -210,7 +183,7 @@
                                                 <td>Tipo de Salario</td>
                                                 <td>Sueldo</td>
                                                 <td>Estado</td>
-                                                <td></td>
+                                                <td>Acciones</td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -239,9 +212,17 @@
                                                     <span ng-if="employee.status == 'inactive'" class="state inactive">Inactivo</span>
                                                 </td>
                                                 <td>
-                                                    <span class="more">
-                                                        <i class="zmdi zmdi-more"></i>
-                                                    </span>
+                                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Editar" data-toggle="modal"
+                                                        data-target="#largeModal" ng-click="getEmployee(employee._id)">
+                                                        <i class="zmdi zmdi-mail-edit"></i>
+                                                    </button>
+                                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Eliminar">
+                                                        <i class="zmdi zmdi-mail-delete"></i>
+                                                    </button>
+                                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Agregar novedad" data-toggle="modal"
+                                                        data-target="#largeModal">
+                                                            <i class="zmdi zmdi-more"></i>
+                                                    </button>
                                                 </td>
                                             </tr>
                                         </tbody>
