--- a/views/register.hbs
+++ b/views/register.hbs
@@ -12,27 +12,27 @@
                         <form ng-submit="registerClient()">
                             <div class="form-group">
                                 <label>Usuario</label>
-                                <input ng-model="form.username" class="au-input au-input--full" type="text" name="username" placeholder="Usuario">
+                                <input ng-model="form.username" class="au-input au-input--full" type="text" name="username" placeholder="Usuario" required>
                             </div>
                             <div class="form-group">
                                 <label>Contraseña</label>
-                                <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña">
+                                <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
                             </div>
                             <div class="form-group">
                                 <label>Nombre</label>
-                                <input ng-model="form.name" class="au-input au-input--full" type="text" name="name" placeholder="Nombre">
+                                <input ng-model="form.name" class="au-input au-input--full" type="text" name="name" placeholder="Nombre" required>
                             </div>
                             <div class="form-group">
                                 <label>Entidad legal</label>
                                 <div class="form-check">
                                     <div class="radio">
                                         <label for="physical" class="form-check-label ">
-                                            <input ng-model="form.person_type" id="physical" type="radio" name="person_type" value="physical" class="form-check-input">Física
+                                            <input ng-model="form.person_type" id="physical" type="radio" name="person_type" value="physical" class="form-check-input" required>Física
                                         </label>
                                     </div>
                                     <div class="radio">
                                         <label for="legal_entity" class="form-check-label ">
-                                            <input ng-model="form.person_type" id="legal_entity" type="radio" name="person_type" value="legal entity" class="form-check-input">Jurídica
+                                            <input ng-model="form.person_type" id="legal_entity" type="radio" name="person_type" value="legal_entity" class="form-check-input" required>Jurídica
                                         </label>
                                     </div>
                                 </div>
@@ -43,15 +43,15 @@
                             </div>
                             <div class="form-group">
                                 <label>Cuit</label>
-                                <input ng-model="form.cuit" class="au-input au-input--full" type="text" name="cuit" placeholder="Dirección">
+                                <input ng-model="form.cuit" class="au-input au-input--full" type="text" name="cuit" placeholder="Cuit" required>
                             </div>
                             <div class="form-group">
                                 <label>IVA</label>
-                                <input ng-model="form.iva" class="au-input au-input--full" type="text" name="iva" placeholder="IVA">
+                                <input ng-model="form.iva" class="au-input au-input--full" type="text" name="iva" placeholder="IVA"required>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" ng-show="form.person_type == 'legal_entity'">
                                 <label>Ingresos brutos</label>
-                                <input ng-model="form.gross_income" class="au-input au-input--full" type="text" name="gross_income" placeholder="Ingresos brutos">
+                                <input ng-model="form.gross_income" class="au-input au-input--full" type="text" name="gross_income" placeholder="Ingresos brutos" ng-required="form.person_type == 'legal_entity'">
                             </div>
                             <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">register</button>
                         </form>
