--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -20,17 +20,17 @@
                     </li>
                     <li>
                         <a href="/updates">
-                            <i class="fa fa-plus"></i>Novedades
+                            <i class="fa fa-check-square"></i>Novedades
                         </a>
                     </li>
                     <li>
                         <a href="/payroll">
-                            <i class="fa fa-list-alt"></i>Liquidaciones
+                            <i class="fa fa-dollar"></i>Liquidaciones
                         </a>
                     </li>
                     <li>
                         <a href="/bills">
-                            <i class="fa fa-money"></i>Facturas
+                            <i class="fa fa-list-alt"></i>Facturas
                         </a>
                     </li>
                 </ul>
@@ -173,7 +173,7 @@
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
                                 <h3 class="title-3 m-b-30">
-                                    <i class="zmdi zmdi-account-calendar"></i>Novedades</h3>
+                                    <i class="zmdi zmdi-calendar-check"></i>Novedades</h3>
                                 
                                 <div class="table-responsive table-data">
                                     <table class="table">
