--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -173,7 +173,7 @@
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
                                 <h3 class="title-3 m-b-30">
-                                    <i class="zmdi zmdi-filter-list"></i>Facturación</h3>
+                                    <i class="zmdi zmdi-tv-list"></i>Facturación</h3>
                                 <div class="table-responsive table-data">
                                     <table class="table">
                                         <thead>
