--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -172,7 +172,7 @@
                         <div class="col-xl-12">
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
-                                <h3 class="title-3 m-b-30"><i class="zmdi zmdi-account-calendar"></i>Empleados</h3>
+                                <h3 class="title-3 m-b-30"><i class="zmdi zmdi-account-box-o"></i>Empleados</h3>
                                 <div class="table-responsive table-data">
                                     <table class="table">
                                         <thead>
