--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -210,16 +210,14 @@
                                                     <span ng-if="employee.status == 'inactive'" class="state inactive">Inactivo</span>
                                                 </td>
                                                 <td>
-                                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Editar" data-toggle="modal"
-                                                        data-target="#largeModal" ng-click="getEmployee(employee._id)">
-                                                        <i class="zmdi zmdi-mail-edit"></i>
+                                                    <button class="action-icon" data-toggle="modal" data-target="#largeModal" ng-click="getEmployee(employee._id)">
+                                                        <i class="fa fa-edit"></i>
                                                     </button>
-                                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Eliminar">
-                                                        <i class="zmdi zmdi-mail-delete"></i>
+                                                    <button class="action-icon" title="Eliminar">
+                                                        <i class="fa fa-trash"></i>
                                                     </button>
-                                                    <button class="item" data-toggle="tooltip" data-placement="top" title="Agregar novedad" data-toggle="modal"
-                                                        data-target="#largeModal">
-                                                            <i class="zmdi zmdi-more"></i>
+                                                    <button class="action-icon" title="Agregar novedad" data-toggle="modal" data-target="#largeModal">
+                                                        <i class="fa fa-plus"></i>
                                                     </button>
                                                 </td>
                                             </tr>
@@ -268,32 +266,36 @@
                                 <div class="form-check">
                                     <div class="radio">
                                         <label for="monthly" class="form-check-label ">
-                                            <input ng-model="form.payroll_type" id="monthly" type="radio" name="payroll_type" value="monthly" class="form-check-input">Mensual
+                                            <input ng-model="form.payroll_type" id="monthly" type="radio" name="payroll_type" value="monthly" class="form-check-input" ng-disabled="form.employee_id">Mensual
                                         </label>
                                     </div>
                                     <div class="radio">
                                         <label for="per_hour" class="form-check-label ">
-                                            <input ng-model="form.payroll_type" id="per_hour" type="radio" name="payroll_type" value="per_hour" class="form-check-input">Por Hora
+                                            <input ng-model="form.payroll_type" id="per_hour" type="radio" name="payroll_type" value="per_hour" class="form-check-input" ng-disabled="form.employee_id">Por Hora
                                         </label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group" ng-show="form.payroll_type == 'monthly'">
                                 <label>Salario Mensual</label>
-                                <input ng-model="form.gross_salary" class="au-input au-input--full" type="text" name="gross_salary" placeholder="Salario Mensual del empleado...">
+                                <input ng-model="form.gross_salary" class="au-input au-input--full" type="number" name="gross_salary" placeholder="Salario Mensual del empleado..." ng-disabled="form.employee_id">
+                            </div>
+                            <div class="form-group" ng-show="form.payroll_type == 'monthly'">
+                                <label>Deducciones</label>
+                                <input ng-model="form.deductions" class="au-input au-input--full" type="number" name="deductions" placeholder="Jubilación, PAMI y Obra Social (17% por defecto)">
                             </div>
                             <div class="form-group" ng-show="form.payroll_type == 'per_hour'">
                                 <label>Salario Por Hora</label>
-                                <input ng-model="form.salary_per_hour" class="au-input au-input--full" type="text" name="salary_per_hour" placeholder="Salario Por Hora del empleado...">
+                                <input ng-model="form.salary_per_hour" class="au-input au-input--full" type="number" name="salary_per_hour" placeholder="Salario Por Hora del empleado..." ng-disabled="form.employee_id">
                             </div>
                             <div class="form-group" ng-show="form.payroll_type == 'per_hour'">
                                 <label>Horas Estimadas</label>
-                                <input ng-model="form.estimated_hours" class="au-input au-input--full" type="text" name="estimated_hours" placeholder="Horas estimadas diarias del empleado...">
+                                <input ng-model="form.estimated_hours" class="au-input au-input--full" type="number" name="estimated_hours" placeholder="Horas estimadas diarias del empleado...">
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-modal-btn">Cancelar</button>
                         <button type="button" class="btn btn-primary" ng-click="registerEmployee()">Guardar</button>
                     </div>
                 </div>
