--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -1,4 +1,4 @@
-<div class="page-wrapper" ng-controller="EmployeesController" ng-init="getUserId('{{user._id}}')">
+<div class="page-wrapper" ng-controller="PayrollController" ng-init="getUserId('{{user._id}}')">
     <!-- MENU SIDEBAR-->
     <aside class="menu-sidebar2">
         <div class="logo">
