--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -67,6 +67,17 @@
         </section>
         <!-- END BREADCRUMB-->
 
+        <!-- HEADER -->
+        <header class="header-desktop2">
+            <div class="section__content section__content--p30">
+                <div class="container-fluid">
+                    <div class="header-wrap2">
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- END HEADER -->
+
         <section>
             <div class="section__content section__content--p30">
                 <div class="container-fluid ">
